adds post Enable Preview Feature